# zentra-core.github.io

./: .env.example  .gitignore  .windsurfrules  Aura_Run_Vulkan.bat  CONFIG_EDITOR_STANDALONE_RUN.bat  CONTRIBUTING.md  INSTALL_SERVICE_WIN.bat  INSTALL_ZENTRA_LINUX.sh  INSTALL_ZENTRA_WIN.bat  README.md  README_ESP.md  README_ITA.md  START_ZENTRA_TRAY_LINUX.sh  START_ZENTRA_TRAY_WIN.bat  UNINSTALL_SERVICE_WIN.bat  ZENTRA_CONSOLE_RUN.sh  ZENTRA_CONSOLE_RUN_WIN.bat  ZENTRA_RUN.bat  ZENTRA_Run_Nvidia.bat  ZENTRA_Run_Vulkan.bat  ZENTRA_WEB_RUN.bat  ZENTRA_WEB_RUN_WIN.bat  _config.yml  bump_version.py  config.json  config_audio.json  config_editor_separato.bat  config_media.json  debug_config.py  delete  extract.py  features.html  health_check_out.txt  health_check_result.txt  index.html  log_check.txt  main.py  monitor.py  prompt_output.txt  pyproject.toml  (+23 more)
app/: __init__.py  application.py  bootstrapper.py  config.py  input_handler.py  menu_handler.py  model_manager.py  personality_manager.py  state_manager.py  threads.py
assets/: voice_greetings.json
community/: index.html
config/: yaml_utils.py
core/: config_editor.py  media_config.py  plugin_loader.py  registry.json
demo/: index.html
docs/: ARCHITECTURE_MAP.md  GITHUB_WIKI.md  GUIDA_UNIFICATA_ITA.md  MANUALE_OPERATIVO.md  Mappa cartelle, file e struttura V0.9.3.txt  Mappa cartelle, file e struttura V0.9.5.txt  OPERATING_MANUAL.md  PLUGINS_DEV.md  TECHNICAL_GUIDE.md  UNIFIED_GUIDE_EN.md  _config.yml  features.html  guida all'installazione.txt  index.html  installation_guide.md  python_setup.md  robots.txt  (+4 more)
(+689 files in other folders)
