[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "zentra-core"
version = "0.19.0"
description = "Modular AI Agentic Operating System"
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "litellm",
]

[project.optional-dependencies]
# Install with: pip install ".[service]"
service = [
    "pywin32; sys_platform=='win32'",
    "pystray",
    "pillow",
]

[project.scripts]
zentra-service = "zentra.service.windows_service:main"
zentra-tray    = "zentra.tray.tray_app:run_tray"

[tool.setuptools.packages.find]
where = ["."]